rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq
  namespace: messaging
spec:
  replicas: 1
  serviceName: rabbitmq-service
  selector:
    matchLabels:
      app.kubernetes.io/name: task-queue
      app.kubernetes.io/component: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: task-queue
        app.kubernetes.io/component: rabbitmq
    spec:
      containers:
      - image: rabbitmq:4.0.5
        name: rabbitmq
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15692
          name: prometheus
        resources:
          requests:
            memory: 16M
            cpu: 500m
          #limits:
          #  cpu: 250m
          #  memory: 512M
        #env:
        #- name: RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS
        #  value: "-rabbit consumer_timeout 36000000"
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-data
      volumes:
      - name: rabbitmq-data
        emptyDir: {}
      nodeSelector:
        kubernetes.io/hostname: node01
      #tolerations:
      #- key: "mq"
      #  operator: "Exists"
      #  effect: "NoExecute"
