image-registry.yaml
# https://devoriales.com/post/298/setting-up-a-docker-registry-on-kubernetes
apiVersion: v1
kind: Namespace
metadata:
  name: images
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: images
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        volumeMounts:
        - name: registry-storage
          mountPath: "/var/lib/registry"
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-pvc
      tolerations:
      - key: "datanode"
        operator: "Exists"
        effect: "NoExecute"
---
apiVersion: v1
kind: Service
metadata:
  name: image-registry
  namespace: images
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      nodePort: 30500
  type: NodePort
