kafka-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    service: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      service: zookeeper
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: zookeeper
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: zookeeper
          imagePullPolicy: Always
          image: confluentinc/cp-zookeeper:7.3.2
          ports:
            - containerPort: 2181
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/zookeeper/data
              name: zookeeper-data-storage
            - mountPath: /var/lib/zookeeper/log
              name: zookeeper-log-storage
      volumes:
      - name: zookeeper-data-storage
        persistentVolumeClaim:
          claimName: zookeeper-data-pvc
      - name: zookeeper-log-storage
        persistentVolumeClaim:
          claimName: zookeeper-log-pvc
      hostname: zookeeper
      restartPolicy: Always
