loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki
spec:
  selector:
    app: loki
    component: loki
    tier: logging
  type: NodePort
  ports:
  - name: http
    port: 3100
    nodePort: 32031
  - name: grpc
    port: 9096
